# model_regression_detector

./: README.md
model-regression-detector/: Dockerfile  docker-compose.yml  implementation_plan.md  pyproject.toml  requirements.txt
model-regression-detector/assets/: sample_report.html
model-regression-detector/data/: eval_results.db
model-regression-detector/golden_dataset/: dataset_v1.json  schema.json
model-regression-detector/prompts/: v1.yaml  v2.yaml
model-regression-detector/reports/: eval_report_v1_20260720_063108.html  eval_report_v2_20260720_063931.html
model-regression-detector/scripts/: run_eval.py  seed_baseline.py
model-regression-detector/src/: __init__.py  alerting.py  classifier.py  comparator.py  config.py  db.py  drift_detector.py  eval_runner.py  prompt_loader.py  report_generator.py  scoring.py
model-regression-detector/tests/: __init__.py  test_classifier.py  test_comparator.py  test_drift_detector.py  test_scoring.py
